--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:5432/GA
-spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://190.15.134.7:8080/GA
+spring.datasource.username=appti
+spring.datasource.password=@Aplicaciones@TecnologiaInternet@2021
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
